Fixed image visibility at breakpoint

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,13 +113,13 @@ div .message {
   }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   .message-img {
     max-width: 100%;
   }
 }
 
-@media only screen and (min-width: 993px) {
+@media only screen and (min-width: 992px) {
   .message-img {
     max-width: 100%;
   }
